--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://localhost:4000/contact/" />
 <meta property="og:site_name" content="Plusbits.com" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/contact/","headline":"Contact","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"http://localhost:4000/contact/","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","@type":"WebPage","headline":"Contact","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Plusbits.com" /></head>
 <body><header class="site-header" role="banner">
@@ -57,7 +57,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li class="p-name">Plusbits.com</li><li><a class="u-email" href="mailto:snzy@plusbits.com">snzy@plusbits.com</a></li></ul>
+          <li class="p-name">Plusbits.com</li></ul>
       </div>
 
       <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/snzy"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">snzy</span></a></li><li><a href="https://www.twitter.com/snzy_pb"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">snzy_pb</span></a></li></ul>
