--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Published on GitHub." />
 <meta property="og:description" content="Published on GitHub." />
-<link rel="canonical" href="/404.html" />
-<meta property="og:url" content="/404.html" />
+<link rel="canonical" href="http://localhost:4000/404.html" />
+<meta property="og:url" content="http://localhost:4000/404.html" />
 <meta property="og:site_name" content="Plusbits Blog" />
 <script type="application/ld+json">
-{"url":"/404.html","headline":"Plusbits Blog","description":"Published on GitHub.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"http://localhost:4000/404.html","headline":"Plusbits Blog","description":"Published on GitHub.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Plusbits Blog" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Plusbits Blog" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Plusbits Blog</a><nav class="site-nav">
